--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./imges/logo.png" alt="">
+            <img src="./logo.png" alt="">
         </div>
         <div class="menu">
             <ul>
@@ -48,31 +48,31 @@
                 nisl tincidunt eget. Lectus mauris eros in vitae .</p>
             <div class="qatorcha">
                 <button><b>BUILD YOUR WORLD</b></button>
-                <img src="./imges/strelka .png" alt="">
+                <img src="./strelka .png" alt="">
             </div>
 
         </section>
         <section class="s2">
-            <img src="./imges/img1.png" alt="">
+            <img src="./img1.png" alt="">
         </section>
     </div>
     <br><br><br>
     <div class="icons">
         <div class="icon">
-            <img src="./imges/Location-Icon.png" alt="" style="width: 70px;height: 70px;"> Pay Us a Visit
+            <img src="./Location-Icon.png" alt="" style="width: 70px;height: 70px;"> Pay Us a Visit
         </div>
         <div class="icon">
-            <img src="./imges/phone-call.svg" alt="" style="width: 59px;height: 59px;"> Give Us a Call
+            <img src="./phone-call.svg" alt="" style="width: 59px;height: 59px;"> Give Us a Call
         </div>
         <div class="icon">
-            <img src="./imges/shape.png" alt="" style="width: 48.75px;height: 37.92px;"> Write Us
+            <img src="./shape.png" alt="" style="width: 48.75px;height: 37.92px;"> Write Us
         </div>
     </div>
     <br><br><br><br><br>
     <div class="infocha">
         <div class="left">
         <h1>INTRODUCTION</h1>
-        <div style="display: flex;align-items: center;"><h1>TO HYDRA VR</h1> <img src="./imges/strelka2.png" alt="" style="margin-left: 18px;"></div>
+        <div style="display: flex;align-items: center;"><h1>TO HYDRA VR</h1> <img src="./strelka2.png" alt="" style="margin-left: 18px;"></div>
     </div>
     <div class="right">
         <p>Vitae sapien pellentesque habitant morbi tristique senectus et netus et. Feugiat 
@@ -84,7 +84,7 @@
        <br><br><br><br><br>
     <div class="abaut">
         <div style="width: 50%;" class="abaut-left">
-            <img src="./imges/img2.png" alt="">
+            <img src="./img2.png" alt="">
         </div>
         <div style="width: 50%;" class="abaut-right">
             <h1>ABOUT</h1>
@@ -107,7 +107,7 @@
     <div class="infocha">
         <div class="left">
         <h1>INTRODUCTION</h1>
-        <div style="display: flex;align-items: center;"><h1>TO HYDRA VR</h1> <img src="./imges/strelka2.png" alt="" style="margin-left: 18px;"></div>
+        <div style="display: flex;align-items: center;"><h1>TO HYDRA VR</h1> <img src="./strelka2.png" alt="" style="margin-left: 18px;"></div>
     </div>
     <div class="right">
         <p>Vitae sapien pellentesque habitant morbi tristique senectus et netus et. Feugiat 
@@ -119,7 +119,7 @@
     <br><br><br><br>
 <div class="cards">
     <div class="card">
-        <img src="./imges/card1.png" alt="">
+        <img src="./card1.png" alt="">
         <h1>SIMULATION</h1>
         <br>
         <hr style="width: 80%;margin: auto;height: 2px;background-color: black;">
@@ -130,7 +130,7 @@ libero justo laoreet sit amet vitae.</p>
 <button>TRY IT NOW</button>
     </div>
     <div class="card">
-        <img src="./imges/card2.png" alt="">
+        <img src="./card2.png" alt="">
         <h1>EDUCATION</h1>
         <br>
         <hr style="width: 80%;margin: auto;height: 2px;background-color: black;">
@@ -141,7 +141,7 @@ libero justo laoreet sit amet vitae.</p>
 <button>TRY IT NOW</button>
     </div>
     <div class="card">
-        <img src="./imges/card2.png" alt="">
+        <img src="./card2.png" alt="">
         <h1>SELF-CARE</h1>
         <br>
         <hr style="width: 80%;margin: auto;height: 2px;background-color: black;">
@@ -152,7 +152,7 @@ libero justo laoreet sit amet vitae.</p>
 <button>TRY IT NOW</button>
     </div>
     <div class="card">
-        <img src="./imges/card3.png" alt="">
+        <img src="./card3.png" alt="">
         <h1>OUTDOOR</h1>
         <br>
         <hr style="width: 80%;margin: auto;height: 2px;background-color: black;">
@@ -170,8 +170,8 @@ libero justo laoreet sit amet vitae.</p>
 </div>
 
 <div style="display: flex;align-items: center;justify-content: center;gap: 80px;">
-    <img src="./imges/unreal.png" width="174px">
-    <img src="./imges/unity.png" alt="" width="252px"><img src="./imges/oculus.png" alt="" width="263px"><img src="./imges/vive.png" alt="" width="282px">
+    <img src="./unreal.png" width="174px">
+    <img src="./unity.png" alt="" width="252px"><img src="./oculus.png" alt="" width="263px"><img src="./vive.png" alt="" width="282px">
 </div>
 <br><br><br> <br><br>
 <div class="container">
@@ -196,7 +196,7 @@ libero justo laoreet sit amet vitae.</p>
 <br><br><br><br><br><br>
 <div style="display: flex;">
 <div style="width: 30%;">
-    <img src="./imges/Vector.png" alt="">
+    <img src="./Vector.png" alt="">
 </div>
 <div style="width: 30%;padding-left: 10%;" class="list">
     <li>ABOUT</li>
@@ -208,7 +208,7 @@ libero justo laoreet sit amet vitae.</p>
 <div style="width: 30%;color: #eee;">
     <h2>SOCIALIZE WITH HYDRA</h2>
     <br>
-    <img src="./imges/Frame 7.png" alt="">
+    <img src="./Frame 7.png" alt="">
 </div>
 </div>
 <br><br>
